# notifications

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  fly.toml
src/: main.rs
src/structures/: mod.rs  notification.rs  shard_eruption.rs  travelling_spirit.rs
src/utility/: constants.rs  functions.rs  mod.rs  wind_paths.rs
