[package]
name = "caelus-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
futures = "0.3.30"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serenity = { version = "0.12.2", features = ["http", "model", "utils"]}
sqlx = { version = "0.7.4", features = ["chrono", "runtime-tokio", "postgres", "tls-native-tls"]}
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
